geoguesser_quaka/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoguesser-quaka
  namespace: quaka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoguesser-quaka
  template:
    metadata:
      labels:
        app: geoguesser-quaka
    spec:
      containers:
        - name: geoguesser-quaka
          image: build-01:8085/geoguesser-quaka:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
